--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,13 @@ plugins {
    // id("org.springframework.boot") version "3.2.2"
    // id("io.spring.dependency-management") version "1.1.4"
     id("java")
-    id("org.openrewrite.rewrite") version("7.1.5")
+    id("org.openrewrite.rewrite") version "latest.release"
 }
 
-rewrite {
-
-    //activeRecipe('com.test.HelloToHiRecipe')
-   activeRecipe('com.example.SimpleRecipe')
-
-}
-/*rewriteRun
+rewrite
         {
-           // activeRecipe("com.example.SimpleJavaRewriteRecipe")
-        }*/
+            activeRecipe("x")
+        }
 
 repositories {
     mavenCentral()
@@ -25,26 +19,26 @@ version = "1.0.0"
 java.sourceCompatibility = JavaVersion.VERSION_17
 
 
-dependencies {
+/*dependencies {
     implementation name: 'rewrite-testing-frameworks-0.1.0-SNAPSHOT'
-}
+}*/
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'C:\\Users\\MSUSERSL123\\IdeaProjects\\spring-integration-poc\\build\\libs'
-    }
 }
 
 dependencies {
-    implementation name: 'rewrite-testing-frameworks-0.1.0-SNAPSHOT'
-                      // C:\\Users\\MSUSERSL123\\IdeaProjects\\spring-integration-poc\\build\\libs
-    //implementation (files('C:\\Users\\MSUSERSL123\\IdeaProjects\\rewrite-testing-frameworks\\build\\libs\\rewrite-testing-frameworks-3.4.0-SNAPSHOT.jar'))
-   implementation 'org.openrewrite:rewrite-java:8.47.3'  // Core Java support
+    implementation(platform("org.openrewrite.recipe:rewrite-recipe-bom:latest.release"))
+    implementation("org.openrewrite:rewrite-java")  // Core Java support
+    runtimeOnly("org.openrewrite:rewrite-java-17")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2") // JUnit 5
+    testImplementation("org.openrewrite:rewrite-test")
 
 
 
 
 
-
+}
+tasks.test {
+    useJUnitPlatform() // Ensures JUnit 5 is used
 }
 
