--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
    // id("io.spring.dependency-management") version "1.1.4"
     id("java")
     id("org.openrewrite.rewrite") version "latest.release"
+
+}
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-parameters']
 }
 
 rewrite
@@ -26,6 +30,7 @@ repositories {
 }
 
 dependencies {
+
     implementation "org.projectlombok:lombok:1.18.30"
     annotationProcessor "org.projectlombok:lombok:1.18.30"
     testImplementation "org.projectlombok:lombok:1.18.30"
